First version using 1.0.0 Corrected plugin sbt version